--- a/src/test/resources/properties/or.properties
+++ b/src/test/resources/properties/or.properties
@@ -1,7 +1,7 @@
 #Login
 username_ID=email
 pswd_NAME=pass
-loginBtn_XPATH=//*[starts-with(@id,'_0_6')]
+loginBtn_XPATH=//*[starts-with(@id,'u_0_5')]
 
 #Reg
 
