--- a/src/test/resources/properties/config.properties
+++ b/src/test/resources/properties/config.properties
@@ -1,4 +1,4 @@
 browser=chrome
-testsiteurl=https://facebook.com
+testsiteurl=https://www.globalsqa.com/angularJs-protractor/BankingProject/#/login
 implicit.wait=15
 explicit.wait=5
