--- a/src/test/resources/properties/or.properties
+++ b/src/test/resources/properties/or.properties
@@ -6,3 +6,19 @@ loginBtn_XPATH=//*[starts-with(@id,'u_0_5')]
 #Reg
 
 #Home
+
+#Bank Manager Login Page
+bankMgrLoginBtn_XPATH=//button[text()='Bank Manager Login']
+addCustomerstmrBtn_XPATH = //button[@ng-click='addCust()']
+
+#add the customer
+firstName_XPATH=//input[@placeholder='First Name']
+lastName_XPATH=//input[@placeholder='Last Name']
+postalCode_XPATH=//input[@placeholder='Post Code']
+addCstmrBtn_XPATH=//button[text()='Add Customer']
+
+#Add Account
+openAccountBtn_XPATH=//button[@ng-click='openAccount()']
+CstName_ID=userSelect
+Currency_ID=currency
+processBtn_XPATH=//button[text()='Process']
